--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,13 @@ authors = [
     {name = "Jerónimo Luza",email = "jero.luza@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.11"
 dependencies = [
-    "streetview (>=0.0.11,<0.0.12)"
+    "streetview (>=0.0.11,<0.0.12)",
+    "pyproj (>=3.7.1,<4.0.0)",
+    "geopandas (>=1.1.0,<2.0.0)",
+    "numpy (>=2.3.1,<3.0.0)",
+    "shapely (>=2.1.1,<3.0.0)"
 ]
 
 [tool.poetry]
