--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "pyproj (>=3.7.1,<4.0.0)",
     "geopandas (>=1.1.0,<2.0.0)",
     "numpy (>=2.3.1,<3.0.0)",
-    "shapely (>=2.1.1,<3.0.0)"
+    "shapely (>=2.1.1,<3.0.0)",
+    "tqdm (>=4.67.1,<5.0.0)"
 ]
 
 [tool.poetry]
