--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,9 @@ dependencies = [
     "geopandas (>=1.1.0,<2.0.0)",
     "numpy (>=2.3.1,<3.0.0)",
     "shapely (>=2.1.1,<3.0.0)",
-    "tqdm (>=4.67.1,<5.0.0)"
+    "tqdm (>=4.67.1,<5.0.0)",
+    "ipykernel (>=6.29.5,<7.0.0)",
+    "matplotlib (>=3.10.3,<4.0.0)"
 ]
 
 [tool.poetry]
