--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ h3 = "^4.3.0"
 scikit-learn = "^1.7.0"
 osmnx = "^2.0.4"
 seaborn = "^0.13.2"
+contextily = "^1.6.2"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
