--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,18 +16,17 @@ dependencies = [
     "tqdm (>=4.67.1,<5.0.0)",
     "ipykernel (>=6.29.5,<7.0.0)",
     "matplotlib (>=3.10.3,<4.0.0)",
+    "notebook (>=7.4.4,<8.0.0)",
 ]
 
 [tool.poetry]
 package-mode = false
 
 [tool.poetry.group.dev.dependencies]
-h3 = "^4.3.0"
 scikit-learn = "^1.7.0"
 osmnx = "^2.0.4"
 seaborn = "^0.13.2"
 contextily = "^1.6.2"
-networkx = "^3.5"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
