--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "ipykernel (>=6.29.5,<7.0.0)",
     "matplotlib (>=3.10.3,<4.0.0)",
     "notebook (>=7.4.4,<8.0.0)",
+    "dotenv (>=0.9.9,<0.10.0)",
 ]
 
 [tool.poetry]
@@ -27,6 +28,18 @@ scikit-learn = "^1.7.0"
 osmnx = "^2.0.4"
 seaborn = "^0.13.2"
 contextily = "^1.6.2"
+
+[tool.poetry.group.stego.dependencies]
+torch = ">=2.7.1,<3.0.0"
+wget = ">=3.2,<4.0"
+torchmetrics = ">=1.7.4,<2.0.0"
+torchvision = ">=0.22.1,<0.23.0"
+tensorboard = ">=2.20.0,<3.0.0"
+dino = {extras = ["all"], version = ">=0.0.6,<0.0.7"}
+hydra-core = ">=1.3.2"
+omegaconf = ">=2.3.0"
+pytorch-lightning = ">=2.0.0"
+pydensecrf = {git = "https://github.com/lucasb-eyer/pydensecrf.git"}
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
