added view angles notebook. developing osm coverage now

--- a/.gitignore
+++ b/.gitignore
@@ -100,10 +100,9 @@ data/
 NOTES.md
 
 # STEGO
-STEGO/my_notes/
-STEGO/saved_models/
-STEGO/segmentation_results/
-STEGO/results/
+src/ml/stego/saved_models/
+src/ml/stego/segmentation_results/
+src/ml/stego/results/
 
 # Street View Images
 street_view_images/segmentation_results/
